# hydrophobicity

./: .flake8  .gitignore  README.md  deps.sh  electrostatic.py  find_pocket.py  find_pockets.py  find_water_and_pocket.py  group_pocket.py  hydrophobicity.py  mol_surface.py  pdb_io.py  pyproject.toml  pytest.ini  test_hydrophobicity.py  test_mol_surface.py
common/: __init__.py
conformation/: SteepestDescent.py  conformation_search.py  testChangeEpsilon.py  test_ChangeEpsilon.py  uff_angle.py  uff_bond.py  uff_nonBonded.py  uff_opti.py  uff_torsionAngle.py
conformation/data/: uff.par
core/: __init__.py  normalization.py
data/: 6FS6-mono_noe4z_SAS.xyz  atomic_hydrophobicity.csv
rust/: Cargo.toml
rust/src/: config.rs  electrostatic.rs  hydrophobicity.rs  lib.rs  list_remove_items.rs  pocket.rs  pockets.rs  surface.rs  utils.rs
rust/tests/: test_ext.py
sitemap/conformation/: SteepestDescent.py  conformation_search.py  steepest_descent.py  uff_angle.py  uff_bond.py  uff_nonBonded.py  uff_torsionAngle.py
sitemap/core/: __init__.py
sitemap/hydrophobicity/: electrostatic.py  find_pocket.py  group_pocket.py  hydrophobicity.py  mol_surface.py  pdb_io.py
sitemap/tests/: test_change_epsilon.py  test_hydrophobicity.py  test_mol_surface.py
