[package]
name = "sz_py_ext"
version = "0.1.0"
authors = ["sun <minhua.sun@aixplorerbio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sz_py_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13.1"
num-complex = "0.3"

[dependencies.ndarray]
version = "0.14.0"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
