[package]
name = "sz_py_ext"
version = "0.1.0"
authors = ["sun <minhua.sun@aixplorerbio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sz_py_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13.1"
num-complex = "0.3"

log = "0.4.0"
log4rs = "1.0.0"
rayon = "1.5.1"

once_cell = "1.7.2"

[dependencies.ndarray]
version = "0.14.0"
# features = ["rayon"]

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
